# temperature_sensor

./: .gitignore  Dockerfile  README.md  client.html  pyproject.toml  sensor.py  server.py  start.sh
services/: client_gateway.py  metrics.py  redis_client.py  sensor_gateway.py
