[tool.poetry]
name = "TEMPERATURE_SENSOR"
version = "0.1.0"
description = ""
authors = ["rbexter"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = { version = "^0.21.1", extras = ["standard"] }
websockets = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"